10. Danh sách giảng viên đăng ký chuyên môn

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TranHuuBinhB17DCAT023">
-        <activity android:name=".ManQuanLy"></activity>
+        <activity android:name=".ManListGiangVienOfChuyenMon"></activity>
+        <activity android:name=".ManQuanLy" />
         <activity android:name=".ManAddChuyenMon" />
         <activity android:name=".ManAddGiangVien" />
         <activity android:name=".ManTimKiemGiangVien" />
